# ChangeLog for x11-base/xorg-x11
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-x11/ChangeLog,v 1.359 2005/04/01 18:48:10 agriffis Exp $

  01 Apr 2005; Aron Griffis <agriffis@gentoo.org> xorg-x11-6.8.2-r1.ebuild:
  stable on ia64

  21 Mar 2005; Guy Martin <gmsoft@gentoo.org> xorg-x11-6.8.2-r1.ebuild:
  Stable on hppa.

  13 Mar 2005; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.8.2-r1.ebuild:
  Stable x86. Sorry about the two upgrades in a few days thing, but the first
  was a security bug so there was some time pressure involved. I figured it's
  better to stable this sooner so we can save a compile for people who don't
  sync every day.

  12 Mar 2005; Donnie Berkholz <spyderous@gentoo.org>;
  -xorg-x11-6.7.0-r3.ebuild, -xorg-x11-6.8.0-r4.ebuild,
  -xorg-x11-6.8.2.ebuild:
  (#83598) Remove vulnerable versions except xorg-x11-6.8.0-r3, which is
  forced to stay until arm, hppa, ia64 stable xorg-x11-6.8.2-r1.

  11 Mar 2005; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.8.2-r1.ebuild:
  Stop manually setting HasLinuxInput, as it broke BSD and was only needed for
  2.2 kernels. So, 2.2 kernels are no longer supported.

  11 Mar 2005; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.8.2-r1.ebuild:
  No need to add acecad to ExtraXInputDrivers, it's already in XInputDrivers.

  10 Mar 2005; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.8.0-r5.ebuild:
  (#83598) Stable x86. 6.8.2-r1 may be stabled soon but it's pending
  >=freetype-2.1.8, which I need to discuss with the maintainers, and this
  can't wait.

  10 Mar 2005; Ferris McCormick <fmccor@gentoo.org> xorg-x11-6.8.2-r1.ebuild:
  Stable for sparc, closing Bug 83598 --- security patch for XPM.

  10 Mar 2005; Ferris McCormick <fmccor@gentoo.org> xorg-x11-6.8.2-r1.ebuild:
  Stable for sparc, Bug 83598.

  10 Mar 2005; Danny van Dyk <kugelfang@gentoo.org>
  xorg-x11-6.8.2-r1.ebuild:
  Marked stable on amd64.
