@@ -1,8 +1,8 @@
-MD5 8839b181e475194b0a5fb497be2704a3 xorg-x11-6.8.0-r5.ebuild 52271
-MD5 530189148db5bcdbfc6704c1f4042a9c xorg-x11-6.8.2-r1.ebuild 59223
-MD5 e96bedcba6604b72cd266bccae9680e2 ChangeLog 84555
+MD5 23afde0f08629902b8d0f55e3ba348c9 ChangeLog 84662
 MD5 ac1137a20503dcb8f9ba2939a2a766f6 metadata.xml 230
 MD5 e33b194fdfcdaa928956aa1e5e937b72 xorg-x11-6.8.0-r3.ebuild 40114
+MD5 8839b181e475194b0a5fb497be2704a3 xorg-x11-6.8.0-r5.ebuild 52271
+MD5 b4a44b4cb79aa7fb559ac0852915556a xorg-x11-6.8.2-r1.ebuild 59280
 MD5 70facbdb85b7ef2bc9b9b702442eda7e files/digest-xorg-x11-6.8.0-r3 908
 MD5 54f0d370fb58a9d8a13cd11f3cb4d9b4 files/digest-xorg-x11-6.8.0-r5 911
 MD5 dbe3264aa4246537122c1b6f2faba70d files/digest-xorg-x11-6.8.2-r1 504
